use kubernetes etcd

--- a/playbooks/templates/patroni.yml.j2
+++ b/playbooks/templates/patroni.yml.j2
@@ -1,16 +1,13 @@
-scope: postgres
-namespace: /db/
-name: {{ repmgr_node_name }}
+scope: "{{ cluster_name }}"
+namespace: "/service/"
+name: "{{ inventory_hostname }}"
 
 restapi:
-  listen: 0.0.0.0:8008
-  connect_address: {{ ansible_host }}:8008
+  listen: "{{ ansible_default_ipv4.address }}:8008"
+  connect_address: "{{ ansible_default_ipv4.address }}:8008"
 
 etcd:
-  hosts: "https://127.0.0.1:2379"
-  ca: "/etc/kubernetes/pki/etcd/ca.crt"
-  cert: "/etc/kubernetes/pki/apiserver-etcd-client.crt"
-  key: "/etc/kubernetes/pki/apiserver-etcd-client.key"
+  hosts: "{{ etcd_url }}"
 
 bootstrap:
   dcs:
@@ -20,37 +17,38 @@ bootstrap:
     maximum_lag_on_failover: 1048576
     postgresql:
       use_pg_rewind: true
-      parameters:
-        wal_level: replica
-        hot_standby: "on"
-        max_wal_senders: 10
-        wal_keep_size: 64
-        max_replication_slots: 10
-        archive_mode: "on"
+      use_slots: true
   initdb:
     - encoding: UTF8
-    - data-checksums
-  pg_hba:
-    - host replication replicator 0.0.0.0/0 md5
-    - host all all 0.0.0.0/0 md5
+    - locale: en_US.UTF-8
   users:
-    admin:
-      password: "admin_password"
+    "{{ postgresql_admin_user }}":
+      password: "{{ postgresql_admin_password }}"
       options:
-        - createrole
+        - superuser
         - createdb
+    "{{ replication_user }}":
+      password: "{{ replication_password }}"
+      options:
+        - replication
 
 postgresql:
-  listen: 0.0.0.0:{{ pg_port }}
-  connect_address: {{ ansible_host }}:{{ pg_port }}
-  data_dir: {{ pg_data_dir }}
-  bin_dir: {{ pg_bin_dir }}
+  listen: "{{ ansible_default_ipv4.address }}:5432"
+  connect_address: "{{ ansible_default_ipv4.address }}:5432"
+  data_dir: "{{ pg_data_dir }}"
+  bin_dir: "/usr/lib/postgresql/14/bin"
+  config_dir: "/etc/postgresql/14/main"
+  pgpass: "/tmp/pgpass"
   authentication:
     replication:
-      username: replicator
-      password: "replicator_password"
+      username: "{{ replication_user }}"
+      password: "{{ replication_password }}"
     superuser:
-      username: postgres
-      password: "postgres_password"
+      username: "{{ postgresql_admin_user }}"
+      password: "{{ postgresql_admin_password }}"
   parameters:
-    archive_command: 'cp %p /var/lib/postgresql/archive/%f'
+    wal_level: replica
+    hot_standby: "on"
+    max_wal_senders: 10
+    max_replication_slots: 10
+    wal_keep_size: 512MB
